amyc/src/test/resources/amyc/parser/failing/IntError2.grading.amy
object IntError 
  fn foo(): Int(64) = { 42 }
end IntError